--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,11 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
-  <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600;800&amp;family=Playfair+Display:ital,wght@0,400;0,600;1,400&amp;display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600;800&amp;family=Playfair+Display:ital,wght@0,400;0,600;1,400&amp;display=swap"
+    rel="stylesheet">
   <link rel="manifest" href="manifest.webmanifest">
-  <link rel="manifest" href="manifest.webmanifest">
+
 </head>
 
 <body>
