--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600;800&amp;family=Playfair+Display:ital,wght@0,400;0,600;1,400&amp;display=swap"
     rel="stylesheet">
   <link rel="manifest" href="manifest.webmanifest">
-
+  <script src="https://cdn.onesignal.com/sdks/web/v16/OneSignalSDK.page.js" defer></script>
 </head>
 
 <body>
